# SimpleSocketTest

./: .gitmodules  CMakeLists.txt  simpleSocketTestClient.cpp  simpleSocketTestServer.cpp
src/: ClientApp.cpp  ClientApp.hpp  ServerApp.cpp  ServerApp.hpp  utils.hpp
